--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "private": true,
   "scripts": {
-    "start": "roadhog server",
-    "build": "roadhog build",
+    "start": "NODE_ENV=development roadhog server",
+    "sit": "NODE_ENV=sit roadhog build",
+    "gray": "NODE_ENV=gray roadhog build",
+    "build": "NODE_ENV=production roadhog build",
     "lint": "eslint --ext .js src test",
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "antd": "^4.13.0",
+    "babel-plugin-import": "^1.13.3",
+    "crypto-js": "^4.0.0",
     "dva": "^2.4.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
