--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "antd": "^4.13.0",
+    "antd-mobile": "^2.3.4",
     "babel-plugin-import": "^1.13.3",
     "core-js": "^3.6.5",
     "dva": "^2.4.1",
@@ -18,9 +19,9 @@
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
+    "babel-plugin-dva-hmr": "^0.3.2",
     "chai": "^3.5.0",
     "crypto-js": "^4.0.0",
-    "babel-plugin-dva-hmr": "^0.3.2",
     "eslint": "^4.14.0",
     "eslint-config-umi": "^0.1.1",
     "eslint-plugin-flowtype": "^2.34.1",
